--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="divider"></span>
                             <div class="carrito-total">
                                 <h3>Total:</h3>
-                                <span class="total">$38.580,00</span>
+                                <span class="total">0.00 EUR</span>
                             </div>
                             <button class="btn-comprar">Comprar</button>
                             <button class="btn-vaciar-carrito">Vaciar carrito</button>
