--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <nav>
             <ul class="navbar-list">
-                <li><a href="#">Op1</a></li>
-                <li><a href="#">Op2</a></li>
-                <li><a href="#">Op3</a></li>
+                <li><a href="#">Coffees</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Location</a></li>
             </ul>
 
             <div class="carrito">
@@ -65,12 +65,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repellat modi cum adipisci ea unde! Quaerat esse facilis, non, reprehenderit obcaecati, omnis quo doloribus illo commodi beatae velit vel cupiditate?</p>
         </div>
 
-        <div class="hero-card">
-            <!-- <img src="" alt=""> -->
-            <!-- aca estaria bueno que sea un slider -->
-            <p>Bueno aca iria una imagen</p>
-        </div>
-
     </section>
 <!-- *-------------------------------------------------------------------------------- -->
 
@@ -83,9 +77,9 @@
     <div class="container-filter">
         <h4 class="filter-by">Filter by</h4>
             <div class="filter">
-                <p class="category" data-category="colombia">Coffee beans <span>Colombia</span></p>
-                <p class="category" data-category="brasil">Coffee beans <span>Brasil</span></p>
-                <p class="category" data-category="italiano">Coffee beans <span>Italiano</span></p>
+                <p class="category" data-category="colombia">Coffee beans <span  id="colombia">Colombia</span></p>
+                <p class="category" data-category="brasil">Coffee beans <span id="brasil">Brasil</span></p>
+                <p class="category" data-category="italiano">Coffee beans <span id="italiano">Italiano</span></p>
             </div>
     </div>
 
@@ -99,13 +93,13 @@
 <section class="section-clasic section-img">
 </section>
 <!-- *-------------------------------------------------------------------------------- -->
-<section class="section-blog">
+<section class="section-blog" >
     <h3>We like to show our customers the different types of coffee machines, and that's why we created this mini blog</h3>
     
-    <div class="cards cards-blog">
-        <div class="card card-blog">
+    <div class="cards cards-blog" id="container-all-cards">
+        <div class="card card-blog" id="container-sing-card">
 
-            <img src="placeholder" alt="" class="img-card">
+            <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
 
             <div class="card-text">
                 <h4>Lorem ipsum dolor sit amet consectetur </h4>
@@ -113,7 +107,7 @@
             </div>
 
             <div class="card-description">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                <p>Lorem ipsum dolor adipisicing elit. Quisquam, quae.</p>
             </div>
 
             <div class="card-btn">
@@ -123,9 +117,9 @@
     </div>
 
 
-    <div class="card card-blog">
+    <div class="card card-blog" id="container-sing-card">
 
-        <img src="placeholder" alt="" class="img-card">
+        <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
 
         <div class="card-text">
             <h4>Lorem ipsum dolor sit amet consectetur </h4>
@@ -133,7 +127,7 @@
         </div>
 
         <div class="card-description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur. Quisquam, quae.</p>
         </div>
 
         <div class="card-btn">
@@ -143,9 +137,9 @@
 </div>
 
 
-<div class="card card-blog">
+<div class="card card-blog" id="container-sing-card">
 
-    <img src="placeholder" alt="" class="img-card">
+    <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
@@ -153,7 +147,121 @@
     </div>
 
     <div class="card-description">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur quam, quae.</p>
+    </div>
+
+    <div class="card-btn">
+        <button class="btn-add">Read more</button>
+</div>
+
+</div>
+
+<div class="card card-blog" id="container-sing-card">
+
+    <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
+
+    <div class="card-text">
+        <h4>Lorem ipsum dolor sit amet consectetur </h4>
+        <span class="date">12/12/2012</span>
+    </div>
+
+    <div class="card-description">
+        <p>Lorem ipsum dolor sit amet consectetur quae.</p>
+    </div>
+
+    <div class="card-btn">
+        <button class="btn-add">Read more</button>
+</div>
+
+</div>
+
+<div class="card card-blog" id="container-sing-card">
+
+    <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
+
+    <div class="card-text">
+        <h4>Lorem ipsum dolor sit amet consectetur </h4>
+        <span class="date">12/12/2012</span>
+    </div>
+
+    <div class="card-description">
+        <p>Lorem ipsum dolor sit amet. Quisquam, quae.</p>
+    </div>
+
+    <div class="card-btn">
+        <button class="btn-add">Read more</button>
+</div>
+
+</div>
+
+<div class="card card-blog" id="container-sing-card">
+
+    <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
+
+    <div class="card-text">
+        <h4>Lorem ipsum dolor sit amet consectetur </h4>
+        <span class="date">12/12/2012</span>
+    </div>
+
+    <div class="card-description">
+        <p>Lorem ipsum dolor sit adipisicing elit. Quisquam, quae.</p>
+    </div>
+
+    <div class="card-btn">
+        <button class="btn-add">Read more</button>
+</div>
+
+</div>
+
+<div class="card card-blog" id="container-sing-card">
+
+    <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
+
+    <div class="card-text">
+        <h4>Lorem ipsum dolor sit amet consectetur </h4>
+        <span class="date">12/12/2012</span>
+    </div>
+
+    <div class="card-description">
+        <p>Lorem amet consectetur. Quisquam, quae.</p>
+    </div>
+
+    <div class="card-btn">
+        <button class="btn-add">Read more</button>
+</div>
+
+</div>
+
+<div class="card card-blog" id="container-sing-card">
+
+    <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
+
+    <div class="card-text">
+        <h4>Lorem ipsum dolor sit amet consectetur </h4>
+        <span class="date">12/12/2012</span>
+    </div>
+
+    <div class="card-description">
+        <p>Lorem ipsum adipisicing elit. Quisquam, quae.</p>
+    </div>
+
+    <div class="card-btn">
+        <button class="btn-add">Read more</button>
+</div>
+
+</div>
+
+<div class="card card-blog" id="container-sing-card">
+
+    <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
+
+    <div class="card-text">
+        <h4>Lorem ipsum dolor sit amet consectetur </h4>
+        <span class="date">12/12/2012</span>
+    </div>
+
+    <div class="card-description">
+        <p>Lorem ipsum dolor sit amet Quisquam, quae.</p>
     </div>
 
     <div class="card-btn">
@@ -162,69 +270,7 @@
 
 </div>
 </div>
-
-    <button class="btn-more btn-clasic" id="btn-more">See more</button>
-    <!--* ACA ABAJO VA A VER UN SCROLL -->
-    <!-- <div class="cards cards-blog">
-        <div class="card card-blog">
-
-            <img src="placeholder" alt="" class="img-card">
-
-            <div class="card-text">
-                <h4>Lorem ipsum dolor sit amet consectetur </h4>
-                <span class="date">12/12/2012</span>
-            </div>
-
-            <div class="card-description">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
-            </div>
-
-            <div class="card-btn">
-                <button class="btn-add">Read more</button>
-        </div>
-    
-    </div>
-
-
-    <div class="card card-blog">
-
-        <img src="placeholder" alt="" class="img-card">
-
-        <div class="card-text">
-            <h4>Lorem ipsum dolor sit amet consectetur </h4>
-            <span class="date">12/12/2012</span>
-        </div>
-
-        <div class="card-description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
-        </div>
-
-        <div class="card-btn">
-            <button class="btn-add">Read more</button>
-    </div>
-
-</div>
-
-
-<div class="card card-blog">
-
-    <img src="placeholder" alt="" class="img-card">
-
-    <div class="card-text">
-        <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
-    </div>
-
-    <div class="card-description">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
-    </div>
-
-    <div class="card-btn">
-        <button class="btn-add">Read more</button>
-</div>
-
-</div>
-</div> -->
+    <button id="btn-more" class="btn-clasic">See more</button>
 </section>
 <!-- *-------------------------------------------------------------------------------- -->
 
