--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <nav>
             <ul class="navbar-list">
-                <li><a href="#">Coffees</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Location</a></li>
+                <li><a href="#coffees">Coffees</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#location">Location</a></li>
             </ul>
 
             <div class="carrito">
@@ -62,15 +62,15 @@
         <div class="hero-text">
             <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, iste.</h1>
             <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam non quam suscipit recusandae quis iste error molestiae eius eum perspiciatis?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repellat modi cum adipisci ea unde! Quaerat esse facilis, non, reprehenderit obcaecati, omnis quo doloribus illo commodi beatae velit vel cupiditate?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repellat modi cum adipisci ea unde! Quaerat esse facilis, non, reprehenderit obcaecati?</p>
         </div>
 
     </section>
 <!-- *-------------------------------------------------------------------------------- -->
 
-<section class="section-clasic">
+<section class="section-clasic" id="coffees">
 
-    <div class="selection">
+    <div class="selection" >
         <h3>For this winter we select the best coffee beans</h3>
     </div>
 
@@ -93,7 +93,7 @@
 <section class="section-clasic section-img">
 </section>
 <!-- *-------------------------------------------------------------------------------- -->
-<section class="section-blog" >
+<section class="section-blog" id="blog" >
     <h3>We like to show our customers the different types of coffee machines, and that's why we created this mini blog</h3>
     
     <div class="cards cards-blog" id="container-all-cards">
@@ -102,8 +102,7 @@
             <img src="./assets/img/blog-card.jpg" alt="" class="img-card">
 
             <div class="card-text">
-                <h4>Lorem ipsum dolor sit amet consectetur </h4>
-                <span class="date">12/12/2012</span>
+                <h4>Lorem ipsum dolor sit</h4>
             </div>
 
             <div class="card-description">
@@ -123,7 +122,6 @@
 
         <div class="card-text">
             <h4>Lorem ipsum dolor sit amet consectetur </h4>
-            <span class="date">12/12/2012</span>
         </div>
 
         <div class="card-description">
@@ -143,7 +141,6 @@
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
     </div>
 
     <div class="card-description">
@@ -162,7 +159,6 @@
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
     </div>
 
     <div class="card-description">
@@ -181,7 +177,6 @@
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
     </div>
 
     <div class="card-description">
@@ -200,7 +195,6 @@
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
     </div>
 
     <div class="card-description">
@@ -219,7 +213,6 @@
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
     </div>
 
     <div class="card-description">
@@ -238,7 +231,6 @@
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
     </div>
 
     <div class="card-description">
@@ -257,7 +249,6 @@
 
     <div class="card-text">
         <h4>Lorem ipsum dolor sit amet consectetur </h4>
-        <span class="date">12/12/2012</span>
     </div>
 
     <div class="card-description">
@@ -278,7 +269,7 @@
 </section>
 <!-- *-------------------------------------------------------------------------------- -->
 
-<section class="section-clasic section-ubication-contact">
+<section class="section-clasic section-ubication-contact" id="location">
 
     <div class="circle-ubication"></div>
     <img src="./assets/img/map.png" alt="" class="img-ubication">
