terminado el responsive

--- a/index.html
+++ b/index.html
@@ -24,27 +24,15 @@
         </div>
         <nav class="navbar">
             <ul class="navbar-list" id="navbar-list">
-                <li><a href="#coffees">Coffees</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#location">Location</a></li>
+                <li><a class="nav-link" href="#coffees">Coffees</a></li>
+                <li><a class="nav-link" href="#blog">Blog</a></li>
+                <li><a class="nav-link" href="#location">Location</a></li>
             </ul>
 
             <div class="carrito">
                 <h2>Your products</h2>
                     <div class="carrito-productos">
-                        <!-- aca se van a renderizar los prod. seleccionados -->
-                        <!-- <div class="cart-item">
-                            <img src="placeholder" alt="">
-                        <div class="text-cartProd">
-                            <h3>Nombre del producto</h3>
-                            <p>Precio del producto</p>
-                        </div>
-                        <div class="counter-cartProd">
-                            <span class="quantity-counter up" data-id="2">+</span>
-                            <span class="quantity">1</span> 
-                            <span class="quantity-counter down" data-id="2">-</span>
-                        </div>
-                        </div> -->
+
                     </div>
                         <span class="divider"></span>
                             <div class="carrito-total">
@@ -63,7 +51,7 @@
 
         <div class="hero-text">
             <h1>We invite you the first coffee in the morning</h1>
-            <h3>Because we like to enjoy the process of preparing the first coffee in the morning, its aroma is our perfume</h3>
+            <h3>Because we like to enjoy the process of preparing</h3>
             <p>"The smell of coffee and newspapers. Sunday and its boredo[...]." - Jorge Luis Borges </p>
         </div>
 
@@ -225,19 +213,19 @@
     <img src="./assets/img/map.png" alt="" class="img-ubication">
     <div class="ubication">
 
-        <div class="text-ubication">
+        <div class="text-ubication divider-sec">
             <h3>Find us</h3>
             <p>Bow Ln, London EC4M 9BW, Reino Unido</p>
             <a href="https://earth.google.com/web/search/Am+Rupenhorn+4d,+14055+Berlin,+Alemania/@51.5127378,-0.0932503,23.31649018a,627.759553d,35y,0h,45t,0r/data=CjkaDwoJL20vMDYzN2RrGAIgASImCiQJzHfmwbZESkARazkIWbg8SkAZzoEmzfmgKkAh9868IfpoKkAoAg" target="_blank">View Google Earth</a>
         </div>
 
-        <div class="text-ubication">
+        <div class="text-ubication divider-sec">
             <h3>Get it touch</h3>
             <p> Phone: +44 20 7248 9902</p>
             <p> Email: hola@loguito.com</p>
         </div>
 
-        <div class="text-ubication">
+        <div class="text-ubication divider-ult">
             <h3>Opening hours</h3>
             <p>Weekdays 8.00am — 7.00pm</p>
             <p>Weekends 10.00am — 2.00am</p>
@@ -273,11 +261,11 @@
 <footer>
 
     <div class="img-footer">
-        <img src="./assets/img/logo.png" alt="logo" class="logo">
+        <img src="./assets/img/logo.png" alt="logo" class="logo-footer">
     </div>
 
     <div class="text-footer">
-        <p> C'offee 2022 ©. All rights reserved. Made with love by Solange Leites.</p>
+        <p> C'offee 2022 ©. All rights reserved. Made with 🤍 by Solange Leites.</p>
     </div>
     
 </footer>
