hubieron mejores en la media querie 576px

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="logo-img">
-            <a href="integrador-javascript-five.vercel.app/"><img src="assets/img/logo.png" alt="logo" class="logo"></a>
+            <a href="#home"><img src="assets/img/logo.png" alt="logo" class="logo" ></a>
         </div>
         <div class="icono-carrito">
             <i class="fa-solid fa-cart-shopping carrito-icon"></i>
@@ -47,7 +47,7 @@
 <main>
 <!-- *-------------------------------------------------------------------------------- -->
 
-    <section class="hero">
+    <section class="hero" id="home">
 
         <div class="hero-text">
             <h1>We invite you the first coffee in the morning</h1>
