finalizadas las correcciones del integrador

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
 </div>
     <button id="btn-more" class="btn-clasic">See more</button>
+    <button id="btn-less" class="btn-clasic">See less</button>
 </section>
 <!-- *-------------------------------------------------------------------------------- -->
 
