hechas las correcciones del integrador

--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
         <div class="logo-img">
             <a href="#home"><img src="assets/img/logo.png" alt="logo" class="logo" ></a>
         </div>
+        <div class="juntar">
         <div class="icono-carrito">
             <i class="fa-solid fa-cart-shopping carrito-icon"></i>
         </div>
+        <div class="icono-user">
+            <a href="https://sign-up-integrador.vercel.app/"><i class="fa-solid fa-user"></i></a>
+        </div>
+    
         <div class="bars-menu">
             <i class="fa-solid fa-bars bars"></i>
         </div>
+    </div>
         <nav class="navbar">
             <ul class="navbar-list" id="navbar-list">
                 <li><a class="nav-link" href="#coffees">Coffees</a></li>
