hechas las correcciones

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i class="fa-solid fa-cart-shopping carrito-icon"></i>
         </div>
         <div class="icono-user">
-            <a href="https://sign-up-integrador.vercel.app/"><i class="fa-solid fa-user"></i></a>
+            <a href="./sign-js/index.html"><i class="fa-solid fa-user"></i></a>
         </div>
     
         <div class="bars-menu">
