listo para entregar

--- a/index.html
+++ b/index.html
@@ -16,23 +16,21 @@
         <div class="logo-img">
             <a href="#home"><img src="assets/img/logo.png" alt="logo" class="logo" ></a>
         </div>
-        <div class="juntar">
         <div class="icono-carrito">
             <i class="fa-solid fa-cart-shopping carrito-icon"></i>
         </div>
-        <div class="icono-user">
-            <a href="./sign-js/index.html"><i class="fa-solid fa-user"></i></a>
-        </div>
-    
+   
         <div class="bars-menu">
             <i class="fa-solid fa-bars bars"></i>
         </div>
-    </div>
+
         <nav class="navbar">
             <ul class="navbar-list" id="navbar-list">
                 <li><a class="nav-link" href="#coffees">Coffees</a></li>
                 <li><a class="nav-link" href="#blog">Blog</a></li>
                 <li><a class="nav-link" href="#location">Location</a></li>
+                <li><a href="https://login-integrador-mu.vercel.app/" class="nav-link">Sign up</a></li>
+                <li><a href="https://sign-up-integrador.vercel.app/" class="nav-link">Login</a></li>
             </ul>
 
             <div class="carrito">
