--- a/login-js/index.html
+++ b/login-js/index.html
@@ -4,29 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <link rel="icon" href="../assets/img/logo.png">
+    <title>Login C'offee</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <main>
         <h1 class="title"> <span><a href="../index.html"><i class="fa-regular fa-circle-left back"></i></a></span> Bienvenido a C'offee!</h1>
-        <p class="ask">Si ya estas registrado, <a href="../login-js/index.html" class="login">hacé click acá.</a></p>
+        <p class="ask">Si aún no estas registrado, <a href="../sign-up-js/index.html" class="login">hacé click acá.</a></p>
         <form id="form">
-            <label for="name">Ingresa tu nombre</label>
-            <input type="text" name="name" id="name" placeholder="Ingresá tu nombre">
-
-            <label for="phone">Ingresa tu telefono</label>
-            <input type="text" name="phone" id="phone" placeholder="Ingresá tu telefono">
-
-            <label for="email">Ingresa tu email</label>
-            <input type="text" name="email" id="email" placeholder="Ingresá tu email">
-
-            <label for="pass">Ingresa tu contraseña</label>
-            <input type="text" name="pass" id="pass" placeholder="Ingresá tu contraseña">
+            <label for="user">Usuario</label>
+            <input type="text" name="user" id="user" placeholder="Ingresá tu usuario">
+            <label for="pass">Contraeña</label>
+            <input type="password" name="pass" id="pass" placeholder="Ingresá tu contraseña">
         </form>
-            <button>Registrarme</button>
+            <button>Ingresar</button>
     </main>
 </body>
 </html>
