--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a class="nav-link" href="#coffees">Coffees</a></li>
                 <li><a class="nav-link" href="#blog">Blog</a></li>
                 <li><a class="nav-link" href="#location">Location</a></li>
-                <li><a href="./sign-up-js/index.html" class="nav-link">Sign up</a></li>
+                <li><a href="https://sign-up-js.vercel.app/" class="nav-link">Sign up</a></li>
                 <li><a href="./login-js/index.html" class="nav-link">Login</a></li>
             </ul>
 
